kong/kong-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kong-database
  name: kong-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong-database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: kong-database
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: kong
        - name: POSTGRES_USER
          value: kong
        image: postgres:9.6
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - kong
          failureThreshold: 5
          periodSeconds: 5
          timeoutSeconds: 5
        name: kong-database
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
