kong/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: kong
    spec:
      containers:
      - env:
        - name: KONG_ADMIN_LISTEN
          value: 0.0.0.0:8001
        - name: KONG_PG_HOST
          value: kong-database
        - name: KONG_PROXY_LISTEN
          value: 0.0.0.0:8000
        - name: KONG_PROXY_LISTEN_SSL
          value: 0.0.0.0:8443
        image: kong:latest
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://kong:8001
          failureThreshold: 15
          periodSeconds: 5
          timeoutSeconds: 2
        name: kong
        ports:
        - containerPort: 8001
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
