kong/kong-migration-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: kong-migration
  name: kong-migration
spec:
  containers:
  - args:
    - kong
    - migrations
    - bootstrap
    image: kong:latest
    name: kong-migration
    resources: {}
  restartPolicy: OnFailure
status: {}
