kong/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: konga
  name: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: konga
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: konga
    spec:
      containers:
      - env:
        - name: DB_ADAPTER
          value: postgres
        - name: DB_DATABASE
          value: konga_db
        - name: DB_HOST
          value: kong-database
        - name: DB_USER
          value: kong
        - name: NODE_ENV
          value: production
        - name: TOKEN_SECRET
          value: km1GUr4RkcQD7DewhJPNXrCuZwcKmqjb
        image: pantsel/konga:next
        imagePullPolicy: ""
        name: konga
        ports:
        - containerPort: 1337
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
