kong/konga-prepare-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: konga-prepare
  name: konga-prepare
spec:
  containers:
  - args:
    - -c
    - prepare
    - -a
    - postgres
    - -u
    - postgresql://kong@kong-database:5432/konga_db
    image: pantsel/konga:next
    name: konga-prepare
    resources: {}
  restartPolicy: OnFailure
status: {}
