kong/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: kong
status:
  loadBalancer: {}
