kong/konga-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: konga
  name: konga
spec:
  ports:
  - name: "1337"
    port: 1337
    targetPort: 1337
  selector:
    io.kompose.service: konga
status:
  loadBalancer: {}
